# data-science-test

./: CLAUDE.md  README.md  main.py  pyproject.toml
comparison/: insights.md  metrics.md
minimal-guidance/: README.md  analysis.ipynb
minimal-guidance/logs/: conversation.md
minimal-guidance/results/: segment_summary.csv
structured-approach/: README.md  analysis.ipynb
structured-approach/logs/: conversation.md
structured-approach/prompts/: system-prompt.md  task-breakdown.md
structured-approach/results/: executive_summary.md  model_metrics_comparison.csv  segment_summary.csv
