[project]
name = "data-science-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "nbformat>=5.10.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
